@@ -5,14 +5,14 @@ AUX github2-0.4.0-test_build_path.patch 466 RMD160 b67996360784a1fb528fee5fbcc10
 DIST github2-0.3.1.tar.gz 22885 RMD160 cd2a4557def3e27c95a20713b8ef88b21a488445 SHA1 4dab89b00932928abedc4a1fdc6272827336ddda SHA256 a97ce0f3c6d7915a846ffea076f102c01b7c95a8583330a070af8e6639798e8c
 DIST github2-0.4.0.tar.gz 69090 RMD160 eb3783a6142477df44edf356e52df50ee059e0dc SHA1 13ee558fee20592c37b6b44708ad8f33ca0db71c SHA256 6d326469717dec450b54fce68ac5c0dee4c76895f84cdad105784800bcf75bc7
 EBUILD github2-0.3.1.ebuild 695 RMD160 8cb7959c481b3537815fba99822aef2fc1e85c8d SHA1 4c6c25dd9c6e38517fa2895f661073da93a9a9e2 SHA256 d04ba5333d0b4f88a43415070b348547ff074943506ef3a2233896be1b9603c6
-EBUILD github2-0.4.0.ebuild 1102 RMD160 34631081bc980f5609833a60b7ef35f15ddb69d2 SHA1 d9a00bd526e1ca2fe37d9914ea1b84992768297b SHA256 f6ec3b8a88decf513a097aec5f6f3c0f5b76b63eac5b99999a1c5b62f2af4bba
-MISC ChangeLog 2270 RMD160 bc8915f54f5208769ae62c60a994e437ddac6f12 SHA1 f933fbf906b8f9ea02a295045873d5539edb4a8b SHA256 0a88c19c48033829347d646314a9cfc4077b8194efcf695723242f055cff22bc
-MISC metadata.xml 647 RMD160 09af4425feef0ab2ed752dbe7e7683ef28c0f458 SHA1 c39075966e63e621b01038f9350b43a3353b6458 SHA256 faee41216c00b37ac29520caf25609c35153809517187b810dbdd7ed05980295
+EBUILD github2-0.4.0.ebuild 1140 RMD160 8c452987f0852cf89d7e07f28f75a12a15b740e9 SHA1 523b4cbf830dd018167421616f5c0dfbf5f55eeb SHA256 e4bc6fe5909595be38f51f922e3f15edd189f1e41be03b5e84a254f90b544b16
+MISC ChangeLog 2382 RMD160 cfdd001e954c504167367f7f261622fdc348d31d SHA1 4b86c487f3eb35200a60597d71bb8b44f5aba6ac SHA256 498a38c3c861ef6e537fc4909af6842d513923b849e975ed903981e71b42296f
+MISC metadata.xml 806 RMD160 ebbe88cfd22fddc7c745da87dd2e674e1bbe613b SHA1 e82f8e17d6b4e7eda31f119a14a8103f1e449268 SHA256 44fd8f8c3cd796526261547df299689040cf98c1bcf96b236bab5479f5b0005e
 MISC watch 12 RMD160 93a2adec9e10f09240c494996f1b879ab1a61113 SHA1 d61fd79473fa9466604269b1d76a71d70ed24b7a SHA256 806ffafa2258c82b35917a67c5f7faff76604958adae5efb722ca9ef82ee2874
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk3aDicACgkQzJrj3cAXR0m2IACghy1qmPy+tcE4KvIVJveYXf8s
-6E4AoLLx1iNlcCszevDvePiDIk0aKfEx
-=NfS1
+iEYEARECAAYFAk3aDqgACgkQzJrj3cAXR0muRgCfaQn70z/GtvCUz63PoHHJiBmI
+fmkAn0Vqr3vfani981stIaypMxkcD3iS
+=XlMb
 -----END PGP SIGNATURE-----
