@@ -1,5 +1,5 @@
 dev-python/setuptools doc? ( dev-python/sphinx dev-python/sphinxcontrib-cheeseshop ) test? ( dev-python/nose ) >=app-admin/eselect-python-20091230 dev-lang/python
-|| ( >=dev-lang/python-2.6 dev-python/simplejson ) >=app-admin/eselect-python-20091230 dev-lang/python
+|| ( >=dev-lang/python-2.6 dev-python/simplejson ) proxy? ( dev-python/socksipy ) >=app-admin/eselect-python-20091230 dev-lang/python
 0
 mirror://pypi/g/github2/github2-0.4.0.tar.gz
 
@@ -8,7 +8,7 @@ BSD
 Github API v2 library for Python
 ~amd64 ~x86
 base distutils eutils jnrowe-pypi multilib portability python toolchain-funcs
-doc examples test
+doc examples proxy test
 
 
 
