@@ -2,6 +2,10 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  23 May 2011; James Rowe <jnrowe@gmail.com> github2-0.4.0.ebuild,
+  metadata.xml:
+  Added proxy support deps.
+
   23 May 2011; James Rowe <jnrowe@gmail.com> github2-0.4.0.ebuild:
   Support building documentation.
 
